--- a/index.html
+++ b/index.html
@@ -2,10 +2,43 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="0;url=https://adarkroom.furryrefuge.com">
-<title>Redirecting...</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Wordle Menu</title>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+        margin-top: 50px;
+    }
+
+    h1 {
+        margin-bottom: 30px;
+    }
+
+    .menu-button {
+        display: inline-block;
+        padding: 20px 40px;
+        font-size: 24px;
+        margin: 10px;
+        border: 2px solid black;
+        border-radius: 10px;
+        text-decoration: none;
+        color: black;
+        transition: background-color 0.3s ease;
+    }
+
+    .menu-button:hover {
+        background-color: #eee;
+    }
+</style>
 </head>
 <body>
-If you are not redirected, <a href="https://wordle.furryrefuge.com">click here</a>.
+
+<h1>Wordle</h1>
+
+<a href="https://reactle.vercel.app/" class="menu-button">English</a>
+<a href="https://woertchen.sofacoach.de/" class="menu-button">German</a>
+<a href="https://rudle.vercel.app/" class="menu-button">Russian</a>
+
 </body>
 </html>
